--- a/index.html
+++ b/index.html
@@ -5,13 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+    body{
+    margin: 0;
+    padding: 0;
+      max-width: 375px;
+      font-family: "outfit",Arial, Helvetica, sans-serif;
+      font-size: 15px;
+      font-weight: 400;
+      background-color: hsl(212, 45%, 89%);
+    }
+    @media screen and(min-width: 1380px){
+    body {max-width:144px;}
+  }
+    .container{
+      margin :0 auto;
+      background-color: hsl(0, 0%, 100%);
+      width:250px;
+      display: flex;
+      flex-flow: wrap column;
+      justify-content: center;
+      align-items: center;
+    }
+    figure{
+      width:100%;
+      margin: 1rem;
+      padding: 0.5rem;
+      border-radius: 5px;
+      border: 1px solid #555;
+      
+    }
+
+
+    
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
+
   </style>
 </head>
 <body>
@@ -19,10 +55,14 @@
   Improve your front-end skills by building projects
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
+  <div class="container">
+    <figure><img src="images/image-qr-code.png" alt="QR Code Frontend Mentor"></figure>
+    <h2>Improve your front-end skills by building projects</h2>
+    <p> Scan the QR-Code to visit Frontend Mentor and take our coding skills to the next level</p>
+  </div>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Mustafa Ho</a>.
   </div>
 </body>
 </html>
