--- a/index.html
+++ b/index.html
@@ -1,68 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <title>Frontend Mentor | QR code component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    body{
-    margin: 0;
-    padding: 0;
-      max-width: 375px;
-      font-family: "outfit",Arial, Helvetica, sans-serif;
-      font-size: 15px;
-      font-weight: 400;
-      background-color: hsl(212, 45%, 89%);
-    }
-    @media screen and(min-width: 1380px){
-    body {max-width:144px;}
-  }
-    .container{
-      margin :0 auto;
-      background-color: hsl(0, 0%, 100%);
-      width:250px;
-      display: flex;
-      flex-flow: wrap column;
-      justify-content: center;
-      align-items: center;
-    }
-    figure{
-      width:100%;
-      margin: 1rem;
-      padding: 0.5rem;
-      border-radius: 5px;
-      border: 1px solid #555;
-      
-    }
-
-
-    
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body>
 
-  Improve your front-end skills by building projects
+<body class="body-container">
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  <div class="container">
-    <figure><img src="images/image-qr-code.png" alt="QR Code Frontend Mentor"></figure>
-    <h2>Improve your front-end skills by building projects</h2>
-    <p> Scan the QR-Code to visit Frontend Mentor and take our coding skills to the next level</p>
-  </div>
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Mustafa Ho</a>.
-  </div>
+  <main>
+    <article class="qrcode">
+      <picture class="qrcode__img">
+        <img class="qr-img" src="images/image-qr-code.png" alt="QR Code Frontend Mentor">
+      </picture>
+
+      <div class="qrcode__content">
+        <h2 class="qrcode__title">Improve your front-end skills by building projects</h2>
+        <p class="qrcode__title2"> Scan the QR Code to visit Frontend Mentor and take your coding skills to the next
+          level
+        </p>
+      </div>
+    </article>
+  </main>
+
+  <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://www.github.com/mustafaho">Mustafa</a>.
+    </div>
+  </footer>
+
 </body>
+
 </html>
