Change the layout

--- a/index.html
+++ b/index.html
@@ -4,34 +4,34 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+  <!-- Google font Outfit -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
+
   <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <!-- Custom Style -->
   <link rel="stylesheet" href="style.css">
 </head>
 
 <body class="body-container">
 
   <main>
-    <article class="qrcode">
-      <picture class="qrcode__img">
-        <img class="qr-img" src="images/image-qr-code.png" alt="QR Code Frontend Mentor">
+    <div class="qrcode">
+      <picture class="qrcode-pic">
+        <img class="qrcode-pic-img" src="images/image-qr-code.png" alt="QR Code Frontend Mentor">
       </picture>
 
-      <div class="qrcode__content">
-        <h2 class="qrcode__title">Improve your front-end skills by building projects</h2>
-        <p class="qrcode__title2"> Scan the QR Code to visit Frontend Mentor and take your coding skills to the next
+      <div class="qrcode-content">
+        <h1 class="qrcode-h1">Improve your front-end skills by building projects</h1>
+        <p class="qrcode-p"> Scan the QR Code to visit Frontend Mentor and take your coding skills to the next
           level
         </p>
       </div>
-    </article>
+    </div>
   </main>
 
   <footer>
