--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     </div>
   </main>
 
-  <footer>
+  <!-- <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://www.github.com/mustafaho">Mustafa</a>.
     </div>
-  </footer>
+  </footer> -->
 
 </body>
 
